messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-blue
  labels:
    app: messaging
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
      version: blue
  template:
    metadata:
      labels:
        app: messaging
        version: blue
    spec:
      containers:
        - name: django-blue-container
          image: your-dockerhub-username/django-messaging-app:1.0
          ports:
            - containerPort: 8000
