messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-green
  labels:
    app: messaging
    version: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging
      version: green
  template:
    metadata:
      labels:
        app: messaging
        version: green
    spec:
      containers:
        - name: django-green-container
          image: your-dockerhub-username/django-messaging-app:2.0
          ports:
            - containerPort: 8000
