messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: messaging
    version: green  # Switch to 'blue' or 'green' as needed
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
